# django-website

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml  requirements.txt
docker/reminder/: Dockerfile
project/: settings.py  urls.py  wsgi.py
project/apps/reminder/: admin.py  models.py  urls.py  views.py
project/apps/reminder/templates/: reminder_base.html  reminder_confirm_delete.html  reminder_edit.html  reminder_list.html
project/static/css/: reminder.css  reminder_form.css
